2006-04-18 David Anderson <davea@sgi.com>
     * *.c: Ran indent so all now follow a standard look.
     * dwconf.c: Added fclose(conf_stream).
2006-04-18 David Anderson <davea@sgi.com>
     * dwarfdump.c: Forgot to call key new functions for
       handling variable-size frame data and different 
       frame rule initialization value.
     * dwconf.c: Add a default print for CFA in case of
       an omission in dwarfdump.conf. 
     * dwarfdump.conf: Move setup and rename the ABIs slightly.
2006-04-17 David Anderson <davea@sgi.com>
     * dwarfdump.conf: Correct typos. Remove some register names.
     * dwarfdump.c: Fix compiler warnings, fix -x option usage message.
     * dwconf.h: Fix compiler warnings by changing types.
     * dwconf.c: Change error checking so we check all errors, do
       not stop at first error. Ran indent.  Added code to check
       for extra junk after operand(s).
     * print_frames.c: Fix compiler warnings.
     * Makefile.in: get <prefix> used in install rule and creating
       places to search for dwarfdump.conf
2006-04-16 David Anderson <davea@sgi.com>
     * dwarfdump.conf: New dwarfdump configuration file. Makes using frame
           information easy to read and correct for any ABI/ISA
           without rebuilding dwarfdump.
     * Makefile.in: Added new files dwconf.h dwconf.c
     * dwconf.h dwconf.c: New files implement reading dwarfdump.conf
       and help print_frames.c print frame information correctly
       for ABIs specified at runtime.
     * dwarfdump.1: document -x commands.
     * globals.h: Minor changes to support dwarfdump.conf
     * print_frames.c: Major changes to support a run-time description of 
       the frames info and dwarfdump.conf.
     * print_frames.h: Changes  to support a run-time description of 
       the frames info and dwarfdump.conf.
     * print_sections.c: Minor tweaks to support a run-time 
       description of the frames info and dwarfdump.conf.
