@@ -243,36 +243,159 @@ reg: esi 6
 reg: edi 7
 reg: eip 8
 reg: eflags 9
-reg: cs 10
-reg: ss 11
-reg: ds 12
-reg: es 13
-reg: fs 14
-reg: gs 15
-reg: st0 16
-reg: st1 17
-reg: st2 18
-reg: st3 19
-reg: st4 20
-reg: st5 21
-reg: st6 22
-reg: st7 23
-reg: fctrl 24
-reg: fstat 25
-reg: ftag 26
-reg: fiseg 27
-reg: fioff 28
-reg: foseg 29
-reg: fooff 30
-reg: fop   31
-reg: xmm0  32
-reg: xmm1 33
-reg: xmm2 34
-reg: xmm3  35
-reg: xmm4 36
-reg: xmm5 37
-reg: xmm6 38
-reg: xmm7 39
-reg: mxcsr 40
+
+reg: trapno 10
+reg: st0 11
+reg: st1 12
+reg: st2 13
+reg: st3 14
+reg: st4 15
+reg: st5 16
+reg: st6 17
+reg: st7 18
+# 19 is ? 20 is ?
+reg: xmm0  21
+reg: xmm1  22 
+reg: xmm2  23
+reg: xmm3  24
+reg: xmm4  25
+reg: xmm5  26
+reg: xmm6  27
+reg: xmm7  28
+
+reg: mm0  29
+reg: mm1  30
+reg: mm2  31
+reg: mm3  32
+reg: mm4  33
+reg: mm5  34
+reg: mm6  35
+reg: mm7  36
+
+reg: fcw  37
+reg: fsw  38
+reg: mxcsr 39
+
+reg: es 40
+reg: cs 41
+reg: ss 42
+reg: ds 43
+reg: fs 44
+reg: gs 45
+# 46 47 are ?
+reg: tr 48
+reg: ldtr 49
+
 
 endabi: x86
+
+
+beginabi: x86_64
+frame_interface: 3
+initial_reg_value: 1035  # DW_FRAME_SAME_VAL
+reg_table_size: 66  # more than large enough, hopefully.
+cfa_reg: 1036  # DW_FRAME_CFA_COL3
+
+# The following register names are not necessarily correct...
+reg: rax 0
+reg: rdx 1    
+reg: rcx 2
+reg: rbx 3
+reg: rsi 4
+reg: rdi 5
+reg: rbp 6
+reg: rsp 7
+reg: r8 8
+reg: r9 9
+reg: r10 10
+reg: r11 11
+reg: r12 12
+reg: r13 13
+reg: r14 14
+reg: r15 15
+reg: rip 16
+reg: xmm0 17
+reg: xmm1 18
+reg: xmm2 19
+reg: xmm3 20
+reg: xmm4 21
+reg: xmm5 22
+reg: xmm6 23
+reg: xmm7 24
+reg: xmm8 25
+reg: xmm9 26
+reg: xmm10 27
+reg: xmm11 28
+reg: xmm12 29
+reg: xmm13 30
+reg: xmm14 31
+reg: xmm15 32
+
+reg: st0 33
+reg: st1 34
+reg: st2 35
+reg: st3 36
+reg: st4 37
+reg: st5 38
+reg: st6 39
+reg: st7 40
+
+reg: mm0 41
+reg: mm1 42
+reg: mm2 43
+reg: mm3 44
+reg: mm4 45
+reg: mm5 46
+reg: mm6 47
+reg: mm7 48
+
+reg: rflags 49
+reg: es 50
+reg: cs 51
+reg: ss 52
+reg: ds 53
+reg: fs 54
+reg: gs 55
+# 56, 57 are ?
+reg: fs.base 58
+reg: gs.base 59
+# 60 61 are ?
+reg: tr 62
+reg: ldtr 63
+
+endabi: x86_64
+
+beginabi: m68k
+frame_interface: 3
+initial_reg_value: 1035  # DW_FRAME_SAME_VAL
+reg_table_size: 66  # more than large enough, hopefully.
+cfa_reg: 1036  # DW_FRAME_CFA_COL3
+
+reg: d0 0
+reg: d1 1
+reg: d2 2
+reg: d3 3
+reg: d4 4
+reg: d5 5
+reg: d6 6
+reg: d7 7
+
+reg: a0 8
+reg: a1 9
+reg: a2 10
+reg: a3 11
+reg: a4 12
+reg: a5 13
+reg: a6 14
+reg: sp 15
+
+reg: fp0 16
+reg: fp1 17
+reg: fp2 18
+reg: fp3 19
+reg: fp4 20
+reg: fp5 21
+reg: fp6 22
+reg: pc 23
+
+endabi: m68k
