@@ -1,3 +1,9 @@
+2006-04-28 David Anderson <davea@sgi.com>
+     * dwarfdump.conf: Now has x86_64 register names.
+       x86_64 with help from Tom Hughes (verified
+       from independent sources). 
+       Added m68k register names and refined  x86 list
+       by looking at various information-sources.
 2006-04-18 David Anderson <davea@sgi.com>
      * *.c: Ran indent so all now follow a standard look.
      * dwconf.c: Added fclose(conf_stream).
